--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 body
 {
-	background-image: url"../zoom1.jpg";
+	background-image: url"zoom1.jpg";
 	background-size: cover;
 	background-repeat: no-repeat;
 }
